--- a/s01/index.html
+++ b/s01/index.html
@@ -4,9 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First Site</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="sub-header flex-row">
+            <div class="site-title">模写コーディングのテストサイト</div>
+            <div class="sub-menu">
+                <ul class ="flex-row">
+                    <li>XXXXとは</li>
+                    <li>会社紹介</li>
+                    <li>事業紹介</li>
+                    <li>広告掲載について</li>
+                    <li>お問い合わせ</li>
+                </ul>
+            </div>
+            <div class="sns-link">
+                <ul class="flex-row">
+                    <li class="sns-li">
+                        <a href="https://www.facebook.com/">
+                            <img src="img/facebook_gray.png">
+                        </a>
+                    </li>
+                    <li class="sns-li">
+                        <a href="https://twitter.com/">
+                            <img src="img/twitter_gray.png">
+                        </a>
+                    </li>
+                    <li class="sns-li">
+                        <a href="https://instagram.com/">
+                            <img src="img/instagram_gray.png">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="main-header flex-row">
+            <div class="site-logo">
+                <img src="https://dummyimage.com/180x25/757575/fff" alt="" srcset="">
+            </div>
+            <div class="main-menu">
+                <ul class="flex-row">
+                    <li>About</li>
+                    <li>コース</li>
+                    <li>記事</li>
+                    <li>イベント</li>
+                    <li>講師</li>
+                    <li>サポーター</li>
+                    <li>よくある質問</li>
+                    <li>無料相談はこちら</li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <main>
+
+
+    </main>
+    <footer>
+
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
