--- a/s01/index.html
+++ b/s01/index.html
@@ -7,6 +7,7 @@
     <title>First Site</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <script>console.log("");</script>
 </head>
 <body>
     <header>
@@ -45,20 +46,38 @@
             <div class="site-logo">
                 <img src="https://dummyimage.com/180x25/757575/fff" alt="" srcset="">
             </div>
-            <div class="main-menu">
+            <nav class="main-menu">
                 <ul class="flex-row">
-                    <li>About</li>
-                    <li>コース</li>
-                    <li>記事</li>
-                    <li>イベント</li>
-                    <li>講師</li>
-                    <li>サポーター</li>
-                    <li>よくある質問</li>
-                    <li>無料相談はこちら</li>
+                    <li>
+                        <a href="">About</a>
+                    </li>
+                    <li>
+                        <a href="">コース</a>
+                    </li>
+                    <li>
+                        <a href="">記事</a>
+                    </li>
+                    <li>
+                        <a href="">イベント</a>
+                    </li>
+                    <li>
+                        <a href="">講師</a>
+                    </li>
+                    <li>
+                        <a href="">サポーター</a>
+                    </li>
+                    <li>
+                        <a href="">よくある質問</a>
+                    </li>
+                    <li class="contact-li">
+                        <a class="contact-nav" href="">無料相談はこちら</a>
+                    </li>
                 </ul>
-            </div>
+            </nav>
         </div>
     </header>
+
+
     <main>
 
 
