--- a/s01/index.html
+++ b/s01/index.html
@@ -79,7 +79,10 @@
 
 
     <main>
-
+        <div class="top">
+            <img class="top-picture" src="img/picture_Top_01.jpg" alt="">
+            <div class="top-title">XXXXX</div>
+        </div>
 
     </main>
     <footer>
