--- a/s01/index.html
+++ b/s01/index.html
@@ -81,8 +81,50 @@
     <main>
         <div class="top">
             <img class="top-picture" src="img/picture_Top_01.jpg" alt="">
-            <div class="top-title">XXXXX</div>
+            <div class="top-contents flex-column">
+                <div class="top-title">XXXXXXX</div>
+                <p class="top-sub-title">XXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+                <p class="top-by">by XXXX</p>
+                <div class="top-deadline flex-column">
+                    <p class="deadline-text">応募締め切り</p>
+                    <div class="deadline-box flex-row">
+                        <div class="deadline-item">
+                            <div class="deadline-date">
+                                <span class="date">6.25</span>
+                                <span class="day">mon</span>
+                            </div>
+                            <div class="deadline-course">A Cource</div>
+                        </div>
+                        <div class="deadline-item">
+                            <div class="deadline-date">
+                                <span class="date">5.15</span>
+                                <span class="day">Fri</span>
+                            </div>
+                            <div class="deadline-course">B Cource</div>
+                        </div>
+                        <div class="deadline-item">
+                            <div class="deadline-date">
+                                <span class="date">8.4</span>
+                                <span class="day">Wed</span>
+                            </div>
+                            <div class="deadline-course">C Cource</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+        <section class="mission">
+            <div class="mission-inner">
+                <div class="mission-body">
+                    <h2 class="section-heading"></h2>
+                    <h3 class="section-subheading"></h3>
+                    <div class="section-desc"></div>
+                </div>
+                <div class="mission-img">
+                    <img src="img/section1.png" alt="">
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
