--- a/s01/index.html
+++ b/s01/index.html
@@ -116,7 +116,10 @@
         <section class="mission">
             <div class="mission-inner">
                 <div class="mission-body">
-                    <h2 class="section-heading"></h2>
+                    <h2 class="section-heading">
+                        <span class="section-heading-en">MISSON</span>
+                        <span class="section-heading-ja">ミッション</span>
+                    </h2>
                     <h3 class="section-subheading"></h3>
                     <div class="section-desc"></div>
                 </div>
