--- a/s01/index.html
+++ b/s01/index.html
@@ -120,8 +120,26 @@
                         <span class="section-heading-en">MISSON</span>
                         <span class="section-heading-ja">ミッション</span>
                     </h2>
-                    <h3 class="section-subheading"></h3>
-                    <div class="section-desc"></div>
+                    <h3 class="section-subheading">
+                        テストです。<br/>
+                        テストテストテストテスト
+                    </h3>
+                    <div class="section-desc">
+                        <p>あああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                        <p>
+                            ああああああああああああああああああああああああああああああああああああああああああああああ
+                            ああああああああああああああああああああああああああああああああああああああああああああああ
+                            ああああああああああああああああああああああああああああああああああああああああああああああ
+                            ああああああああああああああああああああああああああああああああああああああああああああああ
+                            ああああああああああ
+                        </p>
+                        <p>
+                            ああああああああああああああああああああああああああああああああああああああああああああああ
+                            ああああああああああああああああああああああああああああああああああああああああああああああ
+                            ああああああああああああああああああああああああああああああああああああああああああああああ
+                            ああああああああああああああああああああああ
+                        </p>
+                    </div>
                 </div>
                 <div class="mission-img">
                     <img src="img/section1.png" alt="">
