--- a/s01/index.html
+++ b/s01/index.html
@@ -76,8 +76,6 @@
             </nav>
         </div>
     </header>
-
-
     <main>
         <div class="top">
             <img class="top-picture" src="img/picture_Top_01.jpg" alt="">
@@ -116,33 +114,55 @@
         <section class="mission">
             <div class="mission-inner">
                 <div class="mission-body">
-                    <h2 class="section-heading">
-                        <span class="section-heading-en">MISSON</span>
-                        <span class="section-heading-ja">ミッション</span>
+                    <h2 class="section-heading-mission">
+                        <span class="section-heading-mission-en">MISSON</span>
+                        <span class="section-heading-mission-ja">ミッション</span>
                     </h2>
-                    <h3 class="section-subheading">
+                    <h3 class="section-subheading-mission">
                         テストです。<br/>
                         テストテストテストテスト
                     </h3>
-                    <div class="section-desc">
-                        <p>あああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                    <div class="section-desc-mission">
                         <p>
-                            ああああああああああああああああああああああああああああああああああああああああああああああ
-                            ああああああああああああああああああああああああああああああああああああああああああああああ
-                            ああああああああああああああああああああああああああああああああああああああああああああああ
-                            ああああああああああああああああああああああああああああああああああああああああああああああ
-                            ああああああああああ
+                            あああああああああああああああああああああああああああああああああああああああああああああああ
                         </p>
                         <p>
-                            ああああああああああああああああああああああああああああああああああああああああああああああ
-                            ああああああああああああああああああああああああああああああああああああああああああああああ
-                            ああああああああああああああああああああああああああああああああああああああああああああああ
-                            ああああああああああああああああああああああ
+                            ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
+                        </p>
+                        <p>
+                            ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
                         </p>
                     </div>
                 </div>
                 <div class="mission-img">
                     <img src="img/section1.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="abount-inner">
+                <h2 class="section-heading-about">
+                    <span class="section-heading-about-en">About</span>
+                    <span class="section-heading-about-ja">XXXXとは？</span>
+                </h2>
+                <h3 class="section-subheading-about">
+                    <span class="section-subheading-about-small">
+                        ああああああああああああああああ<br class="subheading-br-point">ああああああ
+                    </span>
+                    <span class="section-subheading-about-large">
+                        ああああああああ
+                    </span>
+                </h3>
+                <div class="section-desc-about">
+                    <p>
+                        ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
+                    </p>
+                    <p>
+                        ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
+                    </p>
+                    <p>
+                        あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
+                    </p>
                 </div>
             </div>
         </section>
