--- a/s01/index.html
+++ b/s01/index.html
@@ -114,15 +114,15 @@
         <section class="mission">
             <div class="mission-inner">
                 <div class="mission-body">
-                    <h2 class="section-heading-mission">
-                        <span class="section-heading-mission-en">MISSON</span>
-                        <span class="section-heading-mission-ja">ミッション</span>
+                    <h2 class="section-heading">
+                        <span class="section-heading-en">MISSON</span>
+                        <span class="section-heading-ja">ミッション</span>
                     </h2>
-                    <h3 class="section-subheading-mission">
+                    <h3 class="mission-sub-heading">
                         テストです。<br/>
                         テストテストテストテスト
                     </h3>
-                    <div class="section-desc-mission">
+                    <div class="mission-desc">
                         <p>
                             あああああああああああああああああああああああああああああああああああああああああああああああ
                         </p>
@@ -141,19 +141,19 @@
         </section>
         <section class="about">
             <div class="abount-inner">
-                <h2 class="section-heading-about">
-                    <span class="section-heading-about-en">About</span>
-                    <span class="section-heading-about-ja">XXXXとは？</span>
+                <h2 class="about-heading">
+                    <span class="about-heading-en">About</span>
+                    <span class="about-heading-ja">XXXXとは？</span>
                 </h2>
-                <h3 class="section-subheading-about">
-                    <span class="section-subheading-about-small">
+                <h3 class="about-sub-heading">
+                    <span class="about-sub-heading-small">
                         ああああああああああああああああ<br class="subheading-br-point">ああああああ
                     </span>
-                    <span class="section-subheading-about-large">
+                    <span class="about-sub-heading-large">
                         ああああああああ
                     </span>
                 </h3>
-                <div class="section-desc-about">
+                <div class="about-desc">
                     <p>
                         ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
                     </p>
@@ -164,6 +164,60 @@
                         あああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ
                     </p>
                 </div>
+            </div>
+        </section>
+        <section class="feature">
+            <div class="feature-inner">
+                <h2 class="section-heading">
+                    <span class="section-heading-en">FEATURE</span>
+                    <span class="section-heading-ja">魅力</span>
+                </h2>
+                <li class="feature-contents flex-row">
+                    <ul class="feature-item">
+                        <div class="feature-item-img">
+                            <img src="https://dummyimage.com/320x300/008080/fff" alt="" srcset="">
+                            <span class="feature-item-sub-title">FEATURE01</span>
+                        </div>
+                        <div class="feature-item-body">
+                            <h3 class="feature-item-title">
+                                あああああああああああああああああああああああああああ
+                            </h3>
+                            <div class="feature-item-desc">
+                                <p>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                            </div>
+                        </div>
+                    </ul>
+                    <ul class="feature-item">
+                        <div class="feature-item-img">
+                            <img src="https://dummyimage.com/320x300/008080/fff" alt="" srcset="">
+                            <span class="feature-item-sub-title">FEATURE02</span>
+                        </div>
+                        <div class="feature-item-body">
+                            <h3 class="feature-item-title">
+                                あああああああああああああああああああああああああああ
+                            </h3>
+                            <div class="feature-item-desc">
+                                <p>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                            </div>
+                        </div>
+                    </ul>
+                    <ul class="feature-item">
+                        <div class="feature-item-img">
+                            <img src="https://dummyimage.com/320x300/008080/fff" alt="" srcset="">
+                            <span class="feature-item-sub-title">FEATURE03</span>
+                        </div>
+                        <div class="feature-item-body">
+                            <h3 class="feature-item-title">
+                                あああああああああああああああああああああああああああ
+                            </h3>
+                            <div class="feature-item-desc">
+                                <p>ああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああああ</p>
+                            </div>
+                        </div>
+                    </ul>
+                </li>
+                <div class="feature-img"></div>
+                <div class="feature-contact"></div>
             </div>
         </section>
 
