--- a/s01/index.html
+++ b/s01/index.html
@@ -216,7 +216,10 @@
                         </div>
                     </ul>
                 </li>
-                <div class="feature-img"></div>
+                <div class="feature-img flex-row">
+                    <img src="https://dummyimage.com/1320x880/008080/fff" alt="" srcset="">
+                    <img src="https://dummyimage.com/880x880/008080/fff" alt="" srcset="">
+                </div>
                 <div class="feature-contact"></div>
             </div>
         </section>
