タイトル変更(接続テスト)

--- a/s01/index.html
+++ b/s01/index.html
@@ -80,7 +80,7 @@
         <div class="top">
             <img class="top-picture" src="img/picture_Top_01.jpg" alt="">
             <div class="top-contents flex-column">
-                <div class="top-title">XXXXXXX</div>
+                <div class="top-title">タイトル</div>
                 <p class="top-sub-title">XXXXXXXXXXXXXXXXXXXXXXXXXX</p>
                 <p class="top-by">by XXXX</p>
                 <div class="top-deadline flex-column">
